syntax = "proto3";
package authapi;

message RegisterMessage {
    string email = 1;
    string password = 4;
}

message RegisterResponse {
    bool success = 1;
    bool takenEmail = 2;
    bool invalidPassword = 3;
}

service Register {
    rpc RegisterUser(RegisterMessage) returns (RegisterResponse) {}
}

message LoginMessage {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
}

service Login {
    rpc LoginUser(LoginMessage) returns (LoginResponse) {}
}